--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/menu_items.json
+    - assets/promos.json
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
