--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_core: ^3.8.0
   cloud_firestore: ^5.5.0
+  mockito: ^5.4.4
+  http: ^1.2.2
+  bloc_test: ^9.1.7
 
 dev_dependencies:
   flutter_test:
